src/styles/global.css
html,
body,
div,
header,
nav,
footer,
h1,
h2,
h3,
h4,
h5,
h6,
p,
a,
button,
ul,
li,
aside,
main {
    margin: 0;
    padding: 0;
}

@font-face {
    font-family: Garet-Heavy;
    src: url(/Garet-Heavy.ttf);
}

@font-face {
    font-family: Garet-Book;
    src: url(/Garet-Book.ttf);
}

html {
    background-color: #ffffff;
    font-family: "Lato", serif;
    color: #2d2d30;
}

h1 {
    font-family: "Garet-Heavy", serif;
    letter-spacing: 3px;
}

h2,
h3,
h4,
h5,
h6 {
    font-family: "Garet-Book", serif;
    letter-spacing: 2px;
}

aside {
    background-color: #2d2d30;
    width: 20%;
    height: 100vh;
}

main {
    position: absolute;
    top: 0;
    left: 22%;
    width: auto;
}

main h1 {
    font-size: 6.5rem;
    margin-top: 30px;
}

footer {
    font-family: "Garet-Book", serif;
    display: flex;
    gap: 1rem;
    margin-top: 2rem;
    float: center;
    justify-content: center;
    align-items: center;
    position: absolute;
    bottom: 10px;
}

#title_website h2 {
    color: #ffffff;
    font-size: 3rem;
    text-align: left;
}

#title_website h1 {
    color: #ffffff;
    font-size: 4rem;
    text-align: left;
    margin-top: -20px;
}

#title_website {
    padding-left: 32px;
    padding-top: 30px;
}

#header_logo {
    max-width: 150px;
}
/* nav styles */
.hamburger {
    padding-right: 20px;
    cursor: pointer;
}

.hamburger .line {
    display: block;
    width: 40px;
    height: 5px;
    margin-bottom: 10px;
    background-color: #ffffff;
}

.nav-links {
    width: 100%;
    background-color: #2dc7ff;
    display: none;
    margin: 0;
}

main .line {
    background-color: #2d2d30;
    height: 4px;
    width: 80%;
    position: relative;
    left: 10%;
    margin-top: 11px;
    margin-bottom: 20px;
}

aside .line {
    background-color: #36363a;
    height: 4px;
    width: 80%;
    position: relative;
    left: 10%;
    margin-top: 20px;
    margin-bottom: 20px;
}
.nav-links a {
    display: block;
    text-align: center;
    padding: 10px 0;
    text-decoration: none;
    font-size: 1.8rem;
    font-family: "Garet-Heavy", serif;
    font-weight: bold;
    letter-spacing: 6px;
    text-transform: uppercase;
    color: #ffffff;
}

.nav-links a:hover,
.nav-links a:focus {
    background-color: #ffffff;
    color: #2d2d30;
}

.expanded {
    display: unset;
}

@media screen and (min-width: 636px) {
    .nav-links {
        display: block;
        position: static;
        width: auto;
        background: none;
    }
    .hamburger {
        display: none;
    }
}

html.dark {
    background-color: #0d0950;
    color: #fff;
}

.dark .nav-links a {
    color: #fff;
}

